<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_background">

    <TextView
        android:id="@+id/holeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="14dp"
        android:layout_marginStart="14dp"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/hole_label_description"
        android:text="TextView"
        android:textColor="@android:color/white"
        android:textSize="@dimen/item_text_size"
        tools:text="@string/hole_label_placeholder_text"/>

    <TextView
        android:id="@+id/scoreLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:contentDescription="@string/score_label_description"
        android:text="TextView"
        android:textColor="@android:color/white"
        android:textSize="@dimen/item_text_size"
        tools:text="@string/score_placeholder"/>

    <Button
        android:id="@+id/addButton"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:background="@color/button_background"
        android:contentDescription="@string/add_button_description"
        android:text="@string/add_button_text"
        android:textColor="@android:color/white"
        android:textSize="@dimen/item_text_size"/>

    <Button
        android:id="@+id/subtractButton"
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:layout_marginRight="12dp"
        android:layout_toLeftOf="@+id/addButton"
        android:layout_toStartOf="@+id/addButton"
        android:background="@color/button_background"
        android:contentDescription="@string/subtract_button_description"
        android:text="-"
        android:textColor="@android:color/white"
        android:textSize="@dimen/item_text_size"/>
</RelativeLayout>